# prometheus-csv-adapter

./: Cargo.toml  README.md
examples/: config.yaml
examples/basic/: config.yaml  input.csv  output.prom
examples/dallas/: config.yaml
src/: main.rs
